--- a/settings.gradle
+++ b/settings.gradle
@@ -11,7 +11,8 @@ include ':sqldelight-core'
 include ':sqldelight-core-integration-tests'
 include ':sqldelight-gradle-plugin'
 include ':sqldelight-idea-plugin'
-include ':sqldelight-sample'
+include ':sqldelight-sample:android'
+include ':sqldelight-sample:sample-common'
 include ':sqldelight-test-util'
 include ':sqlite-migrations'
 
